--- a/workspace.apko.yaml
+++ b/workspace.apko.yaml
@@ -5,16 +5,23 @@ contents:
     - https://packages.wolfi.dev/os
   packages:
     - bash~5.2.21
+    - ca-certificates~20240705
+    - git~2.45.2
     - go~1.21
     - openssl-dev~3.3.1
     - openssl~3.3.1
+    - tini~0.19.0
     - vim~9.1
     - wolfi-base
     - yara-dev~4.5.1
     - yara~4.5.1
 
 entrypoint:
-  command: /bin/bash
+  command: /sbin/tini --
+
+cmd: /bin/bash
+
+work-dir: /workspace
 
 accounts:
   groups:
